--- a/custom_game/experiments/for_debugging.ipynb
+++ b/custom_game/experiments/for_debugging.ipynb
@@ -60,6 +60,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.save(actor, \"./actor.pt\")\n",
+    "actor = torch.load(\"./actor.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
