--- a/custom_game/experiments/for_debugging.ipynb
+++ b/custom_game/experiments/for_debugging.ipynb
@@ -60,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# torch.save(actor, \"./actor.pt\")\n",
-    "actor = torch.load(\"./actor.pt\")"
+    "# actor = torch.load(\"./actor.pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "    domain=discrete)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 140, 140])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs[\"obs\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-0.1348,  0.0582, -0.0980,  0.0859, -0.1210, -0.0994]],\n",
+       "        grad_fn=<AddmmBackward0>),\n",
+       " tensor([[0, 0, 0, 1, 0, 0]]),\n",
+       " tensor([-1.6583], grad_fn=<SqueezeBackward1>))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actor(obs[\"obs\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +180,7 @@
        "        next: TensorDict(\n",
        "            fields={\n",
        "                done: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
-       "                obs: Tensor(shape=torch.Size([10, 4, 141, 240]), device=cpu, dtype=torch.float32, is_shared=False),\n",
+       "                obs: Tensor(shape=torch.Size([10, 4, 140, 140]), device=cpu, dtype=torch.float32, is_shared=False),\n",
        "                reward: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.float32, is_shared=False),\n",
        "                state_value: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.float32, is_shared=False),\n",
        "                step_count: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.int64, is_shared=False),\n",
@@ -145,7 +188,8 @@
        "            batch_size=torch.Size([10]),\n",
        "            device=None,\n",
        "            is_shared=False),\n",
-       "        obs: Tensor(shape=torch.Size([10, 4, 141, 240]), device=cpu, dtype=torch.float32, is_shared=False),\n",
+       "        obs: Tensor(shape=torch.Size([10, 4, 140, 140]), device=cpu, dtype=torch.float32, is_shared=False),\n",
+       "        sample_log_prob: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.float32, is_shared=False),\n",
        "        state_value: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.float32, is_shared=False),\n",
        "        step_count: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.int64, is_shared=False),\n",
        "        terminated: Tensor(shape=torch.Size([10, 1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
