--- a/custom_game/experiments/for_debugging.ipynb
+++ b/custom_game/experiments/for_debugging.ipynb
@@ -130,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.1348,  0.0582, -0.0980,  0.0859, -0.1210, -0.0994]],\n",
+       "(tensor([[ 0.1114, -0.1134, -0.0116, -0.0187,  0.1237, -0.0972]],\n",
        "        grad_fn=<AddmmBackward0>),\n",
-       " tensor([[0, 0, 0, 1, 0, 0]]),\n",
-       " tensor([-1.6583], grad_fn=<SqueezeBackward1>))"
+       " tensor([[0, 0, 0, 0, 1, 0]]),\n",
+       " tensor([-1.6713], grad_fn=<SqueezeBackward1>))"
       ]
      },
      "execution_count": 8,
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "    is_shared=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,6 +290,70 @@
    "source": [
     "temp_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp_data = env.rollout(1000, actor, )\n",
+    "# temp_data['next', 'reward']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([38, 1, 6])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_data['action'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([157, 4, 140, 140])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_data[\"next\", \"obs\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
