240412_작업(1):여러부분 수정

--- a/custom_game/experiments/for_debugging.ipynb
+++ b/custom_game/experiments/for_debugging.ipynb
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = make_env(transform=True)"
+    "env = make_env(transform=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "    domain=discrete)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,22 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([4, 140, 140])"
+       "tensor(255.)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obs[\"obs\"].shape"
+    "obs[\"obs\"].max()"
    ]
   },
   {
@@ -130,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1114, -0.1134, -0.0116, -0.0187,  0.1237, -0.0972]],\n",
+       "(tensor([[ 0.1998,  0.0635,  0.0802, -0.1100,  0.1468, -0.0102]],\n",
        "        grad_fn=<AddmmBackward0>),\n",
-       " tensor([[0, 0, 0, 0, 1, 0]]),\n",
-       " tensor([-1.6713], grad_fn=<SqueezeBackward1>))"
+       " tensor([[1, 0, 0, 0, 0, 0]]),\n",
+       " tensor([-1.6587], grad_fn=<SqueezeBackward1>))"
       ]
      },
      "execution_count": 8,
