--- a/custom_game/experiments/for_debugging.ipynb
+++ b/custom_game/experiments/for_debugging.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "actor, critic = make_actor_critic(env.action_spec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Conv2d(4, 64, kernel_size=(7, 7), stride=(2, 2), padding=valid)\n",
+       "  (1): ELU(alpha=1.0)\n",
+       "  (2): Conv2d(64, 64, kernel_size=(5, 5), stride=(2, 2), padding=valid)\n",
+       "  (3): ELU(alpha=1.0)\n",
+       "  (4): Conv2d(64, 32, kernel_size=(3, 3), stride=(2, 2), padding=valid)\n",
+       "  (5): Flatten(start_dim=1, end_dim=-1)\n",
+       "  (6): Reshape()\n",
+       "  (7): Linear(in_features=7200, out_features=16, bias=True)\n",
+       "  (8): ELU(alpha=1.0)\n",
+       "  (9): Linear(in_features=16, out_features=6, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for tmp in actor.module[0].modules():\n",
+    "#     print(tmp)\n",
+    "    \n",
+    "[tmp for tmp in actor.module[0].modules()][1]"
    ]
   },
   {
@@ -95,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(255.)"
+       "tensor(255., dtype=torch.float64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,28 +160,45 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "actor = actor.double()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1998,  0.0635,  0.0802, -0.1100,  0.1468, -0.0102]],\n",
-       "        grad_fn=<AddmmBackward0>),\n",
-       " tensor([[1, 0, 0, 0, 0, 0]]),\n",
-       " tensor([-1.6587], grad_fn=<SqueezeBackward1>))"
+       "TensorDict(\n",
+       "    fields={\n",
+       "        action: Tensor(shape=torch.Size([1, 6]), device=cpu, dtype=torch.int64, is_shared=False),\n",
+       "        done: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
+       "        logits: Tensor(shape=torch.Size([1, 6]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "        obs: Tensor(shape=torch.Size([4, 140, 140]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "        sample_log_prob: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "        step_count: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.int64, is_shared=False),\n",
+       "        terminated: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.bool, is_shared=False)},\n",
+       "    batch_size=torch.Size([]),\n",
+       "    device=None,\n",
+       "    is_shared=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "actor(obs[\"obs\"])"
+    "actor(obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +207,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorDict(\n",
+       "    fields={\n",
+       "        action: Tensor(shape=torch.Size([5, 1, 6]), device=cpu, dtype=torch.int64, is_shared=False),\n",
+       "        done: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
+       "        logits: Tensor(shape=torch.Size([5, 1, 6]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "        next: TensorDict(\n",
+       "            fields={\n",
+       "                done: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
+       "                obs: Tensor(shape=torch.Size([5, 4, 140, 140]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "                reward: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "                step_count: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.int64, is_shared=False),\n",
+       "                terminated: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.bool, is_shared=False)},\n",
+       "            batch_size=torch.Size([5]),\n",
+       "            device=None,\n",
+       "            is_shared=False),\n",
+       "        obs: Tensor(shape=torch.Size([5, 4, 140, 140]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "        sample_log_prob: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.float64, is_shared=False),\n",
+       "        step_count: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.int64, is_shared=False),\n",
+       "        terminated: Tensor(shape=torch.Size([5, 1]), device=cpu, dtype=torch.bool, is_shared=False)},\n",
+       "    batch_size=torch.Size([5]),\n",
+       "    device=None,\n",
+       "    is_shared=False)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_data[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +300,13 @@
     "gae(temp_data)\n",
     "# temp_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
